[tool.poetry]
name = "f1-analytics-downloader"
version = "0.1.0"
description = "downloader for f1_analytics project"
authors = ["Alvaro Garcia <alvarogarciainfo@gmail.com>"]
readme = "README.md"
packages = [{include = "f1_analytics_downloader"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.3"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.2"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88 

